add: artice podman vs docker vs k8s

--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,11 @@
     <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='啥都没有!'><title>关于</title>
 
-<link rel='canonical' href='https://example.com/about/'>
+<link rel='canonical' href='https://liangdi.me/about/'>
 
 <link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='关于'>
 <meta property='og:description' content='啥都没有!'>
-<meta property='og:url' content='https://example.com/about/'>
+<meta property='og:url' content='https://liangdi.me/about/'>
 <meta property='og:site_name' content='Liangdi&#39;s Blog'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="关于">
