--- a/search/index.html
+++ b/search/index.html
@@ -3,15 +3,15 @@
     <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>Search</title>
 
-<link rel='canonical' href='https://example.com/search/'>
+<link rel='canonical' href='https://liangdi.me/search/'>
 
 <link rel="stylesheet" href="/scss/style.min.450926226e724574a6b936335ea06111f8aeb253d932c86cb2cc807341cd2889.css"><meta property='og:title' content='Search'>
 <meta property='og:description' content=''>
-<meta property='og:url' content='https://example.com/search/'>
+<meta property='og:url' content='https://liangdi.me/search/'>
 <meta property='og:site_name' content='Liangdi&#39;s Blog'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://example.com/search/index.json"><link rel="preload" href="https://example.com/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://liangdi.me/search/index.json"><link rel="preload" href="https://liangdi.me/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
@@ -203,7 +203,7 @@
     </ol>
 </aside>
 <main class="main full-width">
-<form action="https://example.com/search/" class="search-form"data-json="https://example.com/search/index.json">
+<form action="https://liangdi.me/search/" class="search-form"data-json="https://liangdi.me/search/index.json">
     <p>
         <label>搜索</label>
         <input name="keyword" placeholder="输入关键词..." />
